--- a/package.json
+++ b/package.json
@@ -2,16 +2,26 @@
   "name": "nextjs-aws-amplify",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18.12.1"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --ignore-path .gitignore --write ."
   },
   "dependencies": {
     "@next/font": "13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "volta": {
+    "node": "18.12.1"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.1"
   }
 }
